--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
 tracing = "0.1"
+
+[dev-dependencies]
+dotenvy = "0.15"
