--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ members = ["core", "api", "tui"]
 resolver = "2"
 
 [workspace.package]
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+authors = ["kurama"]
+repository = "https://github.com/kurama/dealve-tui"
+keywords = ["games", "deals", "tui", "terminal", "isthereanydeal"]
+categories = ["command-line-utilities"]
