--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -3,9 +3,14 @@ name = "dealve-api"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+authors.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
+description = "IsThereAnyDeal API client for Dealve"
 
 [dependencies]
-dealve-core = { path = "../core" }
+dealve-core = { path = "../core", version = "1.0.0" }
 tokio = { version = "1.42", features = ["full"] }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
