--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,11 @@ name = "dealve-core"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+authors.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
+description = "Core models and types for Dealve - a game deals finder"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
