--- a/.github/workflows/release_cargo.yml
+++ b/.github/workflows/release_cargo.yml
@@ -7,7 +7,7 @@ jobs:
   release-cargo:
     runs-on: ubuntu-latest
     outputs:
-      published: ${{ steps.publish.outputs.published }}
+      published: ${{ steps.check.outputs.published }}
       version: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
@@ -15,12 +15,22 @@ jobs:
       - name: Get version
         id: version
         run: echo "version=$(cargo metadata --format-version 1 --no-deps | jq -r '.packages[] | select(.name == "dealve-tui") | .version')" >> $GITHUB_OUTPUT
+      - name: Check if version exists on crates.io
+        id: check
+        run: |
+          VERSION=$(cargo metadata --format-version 1 --no-deps | jq -r '.packages[] | select(.name == "dealve-tui") | .version')
+          if cargo search dealve-tui --limit 1 | grep -q "dealve-tui = \"$VERSION\""; then
+            echo "Version $VERSION already exists on crates.io"
+            echo "published=false" >> $GITHUB_OUTPUT
+          else
+            echo "Version $VERSION not found on crates.io, will publish"
+            echo "published=true" >> $GITHUB_OUTPUT
+          fi
       - name: Publish to crates.io
-        id: publish
+        if: steps.check.outputs.published == 'true'
         uses: katyo/publish-crates@v2
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-          ignore-unpublished-changes: true
 
   build-binaries:
     needs: release-cargo
